--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "facebook-backend",
   "version": "1.0.0",
-  "description": "Backend pour publication automatique ImmoPoster",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "form-data": "^4.0.0"
+    "express": "^4.18.2",
+    "axios": "^1.6.7"
   }
 }
