--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "stripe": "^12.0.0"
   }
 }
