--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.7",
-    "stripe": "^12.0.0"
+    "stripe": "^14.0.0",
+    "cors": "^2.8.5"
   }
 }
